deploy/k8s/docs/030-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trust-docs
  labels:
    app.kubernetes.io/name: trust-docs
    app.kubernetes.io/component: documentation
    app.kubernetes.io/part-of: docs
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: trust-docs
      app.kubernetes.io/component: documentation
      app.kubernetes.io/part-of: docs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trust-docs
        app.kubernetes.io/component: documentation
        app.kubernetes.io/part-of: docs
    spec:
      volumes:
        - name: endpoints
          emptyDir: {}
        - name: run
          emptyDir: {}
      containers:
        - image: ghcr.io/trustification/trust-docs:latest
          imagePullPolicy: Always
          name: service
          volumeMounts:
            - name: run
              mountPath: /run
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
