deploy/k8s/docs/040-Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: trust-docs
    app.kubernetes.io/component: documentation
    app.kubernetes.io/part-of: docs
  name: trust-docs
spec:
  ports:
  - name: endpoint
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: trust-docs
    app.kubernetes.io/component: documentation
    app.kubernetes.io/part-of: docs
  type: ClusterIP
