deploy/k8s/docs/050-Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: trust-docs
    app.kubernetes.io/component: documentation
    app.kubernetes.io/part-of: docs
  name: trust-docs
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: endpoint
  to:
    kind: Service
    name: trust-docs
    weight: 100
  wildcardPolicy: None
